# Baxter_Security

./: .gitignore  README.md  baxter_commands~  find_lighter.py
baxter_security/: CMakeLists.txt  package.xml  setup.py
baxter_security/launch/: baxter (copy).launch  baxter.launch
baxter_security/msg/: Coords.msg
baxter_security/src/: baxter_find_red.py  baxter_gripers_calibrate.py  baxter_move_into_ready_pos.py  baxter_rhand_find_blue.py  baxter_rhand_find_color.py  baxter_rhand_find_green.py  baxter_rhand_find_red.py  baxter_rhand_find_xyz.py  baxter_rhand_orient.py  baxter_rhand_wrist_orient.py  christmas.py  ik_solver.py  movement.py  movement_test.py  sleep.py  wrist_orient_control.py
kinect_cam/: CMakeLists.txt  package.xml  setup.py
kinect_cam/launch/: launch.launch
kinect_cam/src/: find_blue.py  find_green.py  find_red.py  find_xyz.py
kinect_test/: CMakeLists.txt  package.xml  setup.py
kinect_test/launch/: baxter.launch~  launch.launch  launch.launch~
kinect_test/msg/: Orientation.msg
kinect_test/src/: find_blue.py  find_green.py  find_red.py  find_red.py~  find_xyz.py  find_xyz.py~
tutorials/: Baxter_Location_Values  Color_HSV_Values  First_Commands  Getting_SDK  Getting_Started  Setting_Up_MoveIt  ik_solver.py  movement_commands_example.py
